2004-12-16 Magnus Hagdorn
 * first stab at simple erosion model