@@ -1,0 +1,14 @@
+\newcommand{\dir}{erosion}
+
+\pagestyle{myheadings}
+\markright{Subglacial Erosion/Transport/Deposition}
+
+\begin{document}
+\title{Subglacial Erosion/Transport/Deposition}
+\author{Magnus Hagdorn\thanks{Magnus.Hagdorn@ed.ac.uk}}
+\maketitle
+\tableofcontents
+\newpage
+
+\input{\dir/erosion.tex}
+\end{document}
