@@ -1,0 +1,54 @@
+# configuration for the EISMINT-2 test-case
+
+[EISMINT-2]
+
+[grid]
+# grid sizes
+ewn = 76
+nsn = 76
+upn = 11
+dew = 20000
+dns = 20000
+
+[options]
+topo_is_relaxed = 1
+temperature = 1
+flow_law = 0
+isostasy = 0
+marine_margin = 2
+stress_calc = 2
+evolution = 0
+basal_water = 0
+slip_coeff = 2
+sliding_law = 0
+vertical_integration = 1
+
+[time]
+tend = 50000.
+dt = 5.
+ntem = 1.
+nvel = 1.
+niso = 1.
+
+[parameters]
+flow_factor = 1
+geothermal = -42e-3
+basal_tract_const = 1.e-3
+
+[Erosion]
+
+[isostasy]
+
+[default]
+title: erosion
+comment: simple erosion, with llfa
+
+[output]
+name: erosion2.nc
+frequency: 1000
+variables: thk bmlt temp uvel vvel bwat topg erate erosion slc relx
+
+[input]
+name: topo.nc
+time: 1
+
