@@ -1,2 +1,8 @@
+2004-12-17 Magnus Hagdorn
+ * added tests and documentation
+ * erosion.f90: implemented isostatic adjustment and erosion update frequency
+ * erosion_setup.f90: get erosion update frequency
+ * erosion_types.f90: added variables for isostasy
+
 2004-12-16 Magnus Hagdorn
  * first stab at simple erosion model
